# fictional-umbrella

./: LICENSE  README.md  pyproject.toml
gmt_script/common/: config.py  mod_iwantall.py
gmt_script/common/mod/: obspy.py  pygmt.py  science.py  sysproc.py  toYearFraction.py
