[tool.poetry]
name = "gmt-script"
version = "20220811.0"
description = "misc rough draft code for mapping by Generic Mapping Tools, a.k.a GMT"
authors = ["Sean Ho <sean.li.shin.ho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gmt_script"}]

[tool.poetry.dependencies]
python = "^3.9"
pygmt = "^0.7.0"
toml = "^0.10.2"
numpy = "^1.23.1"
obspy = "^1.3.0"
ipython = "^8.4.0"
zenipy = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
